syntax = "proto3";

package routingpb;

option go_package="github.com/nitinjangam/car-rental-poc/definitions-store/routingpb";


message RoutingAvailabilityRequest {
    Location Source=1;
}

message RoutingAvailabilityResponse {
    string CarType=1;
    string Location=2;
    int32 Distance=3;
}

message ListRoutingAvailabilityResponse {
    repeated RoutingAvailabilityResponse listRoutingAvailabilityResponse=1;
}

message Location {
    int32 latitude=1;
    int32 longitude=2;
}

service RoutingService {
    rpc GetAvailability(stream RoutingAvailabilityRequest) returns (stream ListRoutingAvailabilityResponse) {};
}